<resources>
    <string name="app_name">Card Manager</string>
    <string name="searchByImage">Search By Image</string>
    <string name="viewInventory">View Inventory</string>
    <string name="viewCart">View Cart</string>
    <string name="configSettings">Settings</string>
    <string name="searchByText">Search By Text</string>
    <string name="aboutUs">About Us</string>
    <string name="cardSearch">Card Name</string>
    <string name="goSearch">Search</string>
    <string name="exit">Quit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_searchImage">Search By Image</string>
    <string name="nav_searchText">Search By Text</string>
    <string name="nav_cart">View Cart</string>
    <string name="nav_inventory">View Inventory</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Card Manager</item>
        <item>Search By Image</item>
        <item>Search By Text</item>
        <item>View Cart</item>
        <item>View Inventory</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="update_database">Update Card Database</string>

    <string name="about_us_text1">For more information on CardManager, please contact:</string>
    <string name="about_us_name">Thirumalai (Das) Venkatesan</string>
    <string name="about_us_email">E: mobius2400@gmail.com</string>

    <!-- Google OCR Text Resources -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
</resources>
