<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.androidhive.navigationdrawer.activities.AboutUsActivity">

    <TextView
        android:text="About Us:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:id="@+id/aboutUsTitle"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:text="@string/about_us_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutUsTitle"
        android:layout_alignStart="@+id/aboutUsTitle"
        android:layout_marginTop="14dp"
        android:id="@+id/aboutUsSubTitle" />

    <TextView
        android:text="@string/about_us_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutUsSubTitle"
        android:layout_alignStart="@+id/aboutUsSubTitle"
        android:layout_marginTop="24dp"
        android:id="@+id/aboutUsName" />

    <TextView
        android:text="@string/about_us_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutUsName"
        android:layout_alignStart="@+id/aboutUsName"
        android:layout_marginTop="23dp" />
</RelativeLayout>
