<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.venkatesan.das.cardmanager.mainActivityController">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="58dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView"
            android:layout_weight="0.39"
            android:layout_height="150dp" />

        <Button
            android:text="@string/searchByImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/captureCard"
            style="@android:style/Widget.Button"
            android:layout_marginTop="62dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <Button
            android:text="@string/searchByText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchText"
            style="@android:style/Widget.Button"
            android:layout_marginTop="27dp"
            android:onClick="onButtonClick"
            android:textSize="18sp"
            android:layout_below="@+id/captureCard"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/viewCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewCart"
            style="@android:style/Widget.Button"
            android:layout_marginTop="31dp"
            android:textSize="18sp"
            android:layout_below="@+id/searchText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onButtonClick" />

        <Button
            android:text="@string/viewInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewInventory"
            style="@android:style/Widget.Button"
            android:layout_marginTop="31dp"
            android:textSize="18sp"
            android:layout_below="@+id/searchText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onButtonClick" />

    </LinearLayout>

</RelativeLayout>
